added artist page andfixed about page glitch fixes #10

--- a/tutorial-project-161522/www/css/about.css
+++ b/tutorial-project-161522/www/css/about.css
@@ -2,6 +2,11 @@ body {
   background: #e4e4e4;
 }
 
+.col-lg-4 {
+  width: 100%;
+  text-align: center;
+}
+
 #bio-section {
   margin: auto;
   width: 50%;
