--- a/tutorial-project-161522/www/css/index.css
+++ b/tutorial-project-161522/www/css/index.css
@@ -10,12 +10,15 @@
   color: #000; /* -currently- dark gray */
 }
 
+.index-descr {
+  color: #000;
+  text-align: center;
+  font-size: 48px;
+  font-size: 4vw;
+}
+
 #main {
   padding-top: 36px;
-}
-#main h1 {
-  font-size: 96px;
-  font-size: 8.5vw;
 }
 
 .col-md-12 {
