Added in Technical Report

--- a/tutorial-project-161522/www/css/about.css
+++ b/tutorial-project-161522/www/css/about.css
@@ -21,7 +21,7 @@ body {
   width: 50%;
 }
 
-#tools-sec {
+#tools-sec, #report, #introduction, #design-sec, #hosting{
   width: 75%;
   text-align: left;
 }
