sorting the non-tabular, grid of items. that's right am still bitter about this table thing smh.

--- a/tutorial-project-161522/www/css/models.css
+++ b/tutorial-project-161522/www/css/models.css
@@ -17,3 +17,12 @@ body {
 .model-inst:hover {
 	background: #d8d8d8;
 }
+
+.btn-group {
+	margin-top: 3%;
+	left: 1.5%;
+}
+
+.btn-group ol {
+	margin: 10px;
+}
