--- a/test/templates/index.html
+++ b/test/templates/index.html
@@ -31,18 +31,18 @@
         <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="cards.html">Cards</a></li>
-            <li><a href="sets.html">Sets</a></li>
-            <li><a href="subtypes.html">Subtypes</a></li>
-            <li><a href="artists.html">Artists</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="/cards">Cards</a></li>
+            <li><a href="/sets">Sets</a></li>
+            <li><a href="/subtypes">Subtypes</a></li>
+            <li><a href="/artists">Artists</a></li>
+            <li><a href="/about">About</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
 
     <div id="main" class="title">
-      <img src="images/MainLogo.png" style="display: block; margin: auto; width: 50%;">
+      <img src="../static/images/MainLogo.png" style="display: block; margin: auto; width: 50%;">
     </div> <!-- end of title -->
 
     <h1 class="index-descr">Magic the Gathering Database</h1>
