--- a/test/templates/about.html
+++ b/test/templates/about.html
@@ -9,7 +9,7 @@
 
 		<!-- Bootstrap -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<link rel="stylesheet" type="text/css" href="css/about.css">
+		<link rel="stylesheet" type="text/css" href="../static/css/about.css">
 	</head>
 
 
@@ -68,7 +68,7 @@
 			</div>
 
 			<div class="col-lg-4">
-					<img class="img-circle" src="../satic/images/joel.jpg" width="140" height="140">
+					<img class="img-circle" src="../static/images/joel.jpg" width="140" height="140">
 					<h2>Joel Davis</h2>
 					<p>Joel is a 4th-year Computer Science major at the University of Texas at Austin. Enjoys game development and software engineering. In his free time he likes video games, guitar, and skateboarding.</p>
 					<p><strong>Responsibilities: </strong>back-end, API</p>
