Made base layout, need cleaner way to fix splash background

--- a/test/templates/sets.html
+++ b/test/templates/sets.html
@@ -1,91 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-		<title>Sets - MagicDB</title>
+{%extends "base.html"%}
 
-		<!-- Bootstrap -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<link rel="stylesheet" type="text/css" href="../static/css/models.css">
-	</head>
+{%block content%}
+	<link rel="stylesheet" type="text/css" href="../static/css/models.css">
+	<div class="magicdb-header">
+		<h1>Sets</h1>
+		<h3>Cards are released in different sets, here are some of them. </h3>
+		<div class="btn-group">
+		  <button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+		    Sort By: <span class="caret"></span>
+		  </button>
+		  <ul class="dropdown-menu">
+		    <ol>Name</ol>
+		    <ol>Code</ol>
+		    <ol>Release Date</ol>
+		    <ol>Number of Cards</ol>
+		  </ul>
+		</div>
+		<div class="btn-group">
+		  <button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+		    Filter By: <span class="caret"></span>
+		  </button>
+		  <ul class="dropdown-menu">
+		    <ol><label class="checkbox-inline"><input type="checkbox" value="">Name</label><input type="text" class="form-control" id="usr"></ol>
+		    <ol><label class="checkbox-inline"><input type="checkbox" value="">Release Year</label><input type="text" class="form-control" id="usr"></ol>
+		    <ol><label class="checkbox-inline"><input type="checkbox" value="">Number of Cards</label><input type="text" class="form-control" id="usr"></ol>
+		  </ul>
+		</div>
+	</div>
 
-
-	<body>
-		<nav class="navbar navbar-default">
-			<div class="container-fluid">
-				<!-- Brand and toggle get grouped for better mobile display -->
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<a class="navbar-brand" href="index.html">MagicDB</a>
-				</div>
-
-				<!-- Collect the nav links, forms, and other content for toggling -->
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav">
-						<li><a href="/index">Home</a></li>
-						<li><a href="/cards">Cards</a></li>
-						<li class="active"><a href="#">Sets</a></li>
-						<li><a href="/subtypes">Subtypes</a></li>
-						<li><a href="/artists">Artists</a></li>
-						<li><a href="/about">About</a></li>
-					</ul>
-				</div><!-- /.navbar-collapse -->
-			</div><!-- /.container-fluid -->
-		</nav>
-		<div class="magicdb-header">
-			<h1>Sets</h1>
-			<h3>Cards are released in different sets, here are some of them. </h3>
-			<div class="btn-group">
-			  <button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-			    Sort By: <span class="caret"></span>
-			  </button>
-			  <ul class="dropdown-menu">
-			    <ol>Name</ol>
-			    <ol>Code</ol>
-			    <ol>Release Date</ol>
-			    <ol>Number of Cards</ol>
-			  </ul>
-			</div>
-			<div class="btn-group">
-			  <button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-			    Filter By: <span class="caret"></span>
-			  </button>
-			  <ul class="dropdown-menu">
-			    <ol><label class="checkbox-inline"><input type="checkbox" value="">Name</label><input type="text" class="form-control" id="usr"></ol>
-			    <ol><label class="checkbox-inline"><input type="checkbox" value="">Release Year</label><input type="text" class="form-control" id="usr"></ol>
-			    <ol><label class="checkbox-inline"><input type="checkbox" value="">Number of Cards</label><input type="text" class="form-control" id="usr"></ol>
-			  </ul>
-			</div>
+	<div class="container-fluid">
+		<div class="model-inst">
+			<img src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=413585&type=card">
+			<h4><a href="sets-instance.html?code=&quot;EMA&quot;&cards=&quot;Counterspell&quot;&name=&quot;Zach Stella&quot;">EMA</a></h4>
 		</div>
 
-		<div class="container-fluid">
-			<div class="model-inst">
-				<img src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=413585&type=card">
-				<h4><a href="sets-instance.html?code=&quot;EMA&quot;&cards=&quot;Counterspell&quot;&name=&quot;Zach Stella&quot;">EMA</a></h4>
-			</div>
-
-			<div class="model-inst">
-				<img src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=425915&type=card">
-				<h4><a href="sets-instance.html?code=&quot;MM3&quot;&cards=&quot;Blood Moon&quot;&name=&quot;Franz Vohwinkel&quot;">MM3</a></h4>
-			</div>
-
-			<div class="model-inst">
-				<img src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=382866&type=card">
-				<h4><a href="sets-instance.html?code=&quot;VMA&quot;&cards=&quot;Black Lotus&quot;&name=&quot;Chris Rahn&quot;">VMA</a></h4>
-			</div>
+		<div class="model-inst">
+			<img src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=425915&type=card">
+			<h4><a href="sets-instance.html?code=&quot;MM3&quot;&cards=&quot;Blood Moon&quot;&name=&quot;Franz Vohwinkel&quot;">MM3</a></h4>
 		</div>
 
-		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-		<!-- Include all compiled plugins (below), or include individual files as needed -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<body>
-</html>
+		<div class="model-inst">
+			<img src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=382866&type=card">
+			<h4><a href="sets-instance.html?code=&quot;VMA&quot;&cards=&quot;Black Lotus&quot;&name=&quot;Chris Rahn&quot;">VMA</a></h4>
+		</div>
+	</div>
+{%endblock%}
