--- a/test/templates/base.html
+++ b/test/templates/base.html
@@ -24,18 +24,30 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="index.html">MagicDB</a>
+					<a class="navbar-brand" href="/">MagicDB</a>
 				</div>
 
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
-						<li><a href="/index">Home</a></li>
-						<li><a href="/cards">Cards</a></li>
-						<li><a href="/sets">Sets</a></li>
-						<li><a href="/subtypes">Subtypes</a></li>
-						<li class="active"><a href="#">Artists</a></li>
-						<li><a href="/about">About</a></li>
+						<li {%if request.path == '/'%} class="active"{% endif %}>
+							<a href="/">Home</a>
+						</li>
+						<li {%if request.path == '/cards'%} class="active"{% endif %}>
+							<a href="/cards">Cards</a>
+						</li>
+						<li {%if request.path == '/sets'%} class="active"{% endif %}>
+							<a href="/sets">Sets</a>
+						</li>
+						<li {%if request.path == '/subtypes'%} class="active"{% endif %}>
+							<a href="/subtypes">Subtypes</a>
+						</li>
+						<li {%if request.path == '/artists'%} class="active"{% endif %}>
+							<a href="/artists">Artists</a>
+						</li>
+						<li {%if request.path == '/about'%} class="active"{% endif %}>
+							<a href="/about">About</a>
+						</li>
 					</ul>
 				</div><!-- /.navbar-collapse -->
 			</div><!-- /.container-fluid -->
