--- a/test/static/css/index.css
+++ b/test/static/css/index.css
@@ -1,7 +1,7 @@
 .splash {
     background-image: url(../images/genesis.jpg);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100vw 100vh;
 }
 
 
@@ -24,7 +24,6 @@
 .col-md-12 {
   margin: 0;
   padding-top: 64px;
-  padding-bottom: 200px;
 }
 
 #myCarousel {
