--- a/test/templates/index.html
+++ b/test/templates/index.html
@@ -1,48 +1,102 @@
-{%extends "base.html"%}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Artists - MagicDB</title>
 
-{%block content%}
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="../static/css/index.css">
+  </head>
 
-  <link rel="stylesheet" type="text/css" href="../static/css/index.css">
-  <div class="splash">
-    <div id="main" class="title">
-      <img src="../static/images/MainLogo.png" style="display: block; margin: auto; width: 50%;">
-    </div> <!-- end of title -->
 
-    <h1 class="index-descr">Magic the Gathering Database</h1>
+  <body class="splash">
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">MagicDB</a>
+        </div>
 
-    <div class="col-md-12">
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-          <li data-target="#myCarousel" data-slide-to="1"></li>
-          <li data-target="#myCarousel" data-slide-to="2"></li>
-          <li data_target="#myCarousel" data-slide-to="3"></li>
-        </ol>
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner" role="listbox">
-          <div class="item active">
-            <div class="carousel-caption">
-              <h1><a href="cards.html">Look at cards!</a></h1>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li {%if request.path == '/'%} class="active"{% endif %}>
+              <a href="/">Home</a>
+            </li>
+            <li {%if request.path == '/cards'%} class="active"{% endif %}>
+              <a href="/cards">Cards</a>
+            </li>
+            <li {%if request.path == '/sets'%} class="active"{% endif %}>
+              <a href="/sets">Sets</a>
+            </li>
+            <li {%if request.path == '/subtypes'%} class="active"{% endif %}>
+              <a href="/subtypes">Subtypes</a>
+            </li>
+            <li {%if request.path == '/artists'%} class="active"{% endif %}>
+              <a href="/artists">Artists</a>
+            </li>
+            <li {%if request.path == '/about'%} class="active"{% endif %}>
+              <a href="/about">About</a>
+            </li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+    <div>
+      <div id="main" class="title">
+        <img src="../static/images/MainLogo.png" style="display: block; margin: auto; width: 50%;">
+      </div> <!-- end of title -->
+
+      <h1 class="index-descr">Magic the Gathering Database</h1>
+
+      <div class="col-md-12">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+          <!-- Indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
+          </ol>
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner" role="listbox">
+            <div class="item active">
+              <div class="carousel-caption">
+                <h1><a href="cards.html">Look at cards!</a></h1>
+              </div>
             </div>
-          </div>
-          <div class="item">
-            <div class="carousel-caption">
-              <h1><a href="sets.html">Look at sets!</a></h1>
+            <div class="item">
+              <div class="carousel-caption">
+                <h1><a href="sets.html">Look at sets!</a></h1>
+              </div>
             </div>
-          </div>
-          <div class="item">
-            <div class="carousel-caption">
-              <h1><a href="artists.html">Look at artists!</a></h1>
+            <div class="item">
+              <div class="carousel-caption">
+                <h1><a href="artists.html">Look at artists!</a></h1>
+              </div>
             </div>
-          </div>
-          <div class="item">
-            <div class="carousel-caption">
-              <h1><a href="subtypes.html">Look at subtypes!</a></h1>
+            <div class="item">
+              <div class="carousel-caption">
+                <h1><a href="subtypes.html">Look at subtypes!</a></h1>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-{%endblock%}
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  </body>
+</html>
