--- a/test/templates/about.html
+++ b/test/templates/about.html
@@ -11,7 +11,7 @@
 		<div class="col-lg-4">
 			<img class="img-circle" src="../static/images/Nestor.jpg" width="140" height="140">
 			<h2>Nestor Castro</h2>
-			<p>Nestor is a 3rd-year Computer Science major at the University of Texas at Austin. He is the current VP of Communications of Sigma Lambda Beta, a Latino-based multicultural Fraternity. On his free time, he enjoys exploring the outdoors, playing pool, and jamming out to the Red Hot Chili Peppers.<p>
+			<p>Nestor is a 3rd-year Computer Science major at the University of Texas at Austin. He is the current VP of Communications of Sigma Lambda Beta, a Latino-based multicultural Fraternity. In his free time, he enjoys exploring the outdoors, playing pool, and jamming out to the Red Hot Chili Peppers.<p>
 			<p><strong>Responsibilities: </strong>front-end, hosting</p>
 			<p><strong>Number of commits: 9</strong></p>
 			<p><strong>Number of issues: 2</strong></p>
