--- a/test/templates/artists.html
+++ b/test/templates/artists.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="../static/css/models.css">
 	<div class="magicdb-header">
 		<h1>Artists</h1>
-		<h3>Magic the Gathering is unique in such way that each card is designed by one of many individual artists, here are some of those artists. </h3>
+		<h3>Magic the Gathering is unique in such a way that each card is designed by one of many individual artists, here are some of those artists. </h3>
 		<div class="btn-group">
 		  <button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 		    Sort By: <span class="caret"></span>
