--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -1,60 +1,48 @@
-.splash {
-    background-image: url(../images/genesis.jpg);
-    background-repeat: no-repeat;
-    background-size: 100vw 100vh;
+html, body {
+  height: 100%;
 }
 
-
-.title h1, .title h2 {
-  text-align: center;
-  color: #000; /* -currently- dark gray */
+.item, .active {
+  height: 100%;
 }
+
+.carousel {
+  height: 100vh;
+  top: -20px;
+}
+
+.carousel-inner {
+  height: 100%;
+}
+
+.carousel-caption h2 {
+  color: #fed;
+  font-size: 30px;
+  font-size: 2.5vw;
+}
+
+.fill {
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  background-size: cover;
+}
+
+.overlay { 
+  position: absolute;
+  z-index: 10;
+  width: 100%;
+}
+
 
 .index-descr {
   color: #000;
   text-align: center;
-  font-size: 48px;
-  font-size: 4vw;
+  /*font-size: 48px;
+  font-size: 4vw;*/
 }
 
-#main {
-  padding-top: 36px;
-}
-
-.col-md-12 {
-  margin: 0;
-  padding-top: 64px;
-}
-
-#myCarousel {
-  background-color: rgba(192, 192, 192, 0.25);
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  vertical-align: middle;
-  width: 60vw;
-  height: 25vh;
-}
-
-.carousel,.item,.active {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-}
-
-.carousel-inner {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-}
-
-.item .carousel-caption {
-  vertical-align: middle;
-  height: 75%;
-}
-
-.carousel-caption h1 a {
-  font-size: 50px;
-  font-size: 4vw;
-  color: white;
+.main-logo {
+  display: block;
+  margin: auto;
 }
