--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -31,18 +31,18 @@
         <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="cards.html">Cards</a></li>
-            <li><a href="sets.html">Sets</a></li>
-            <li><a href="subtypes.html">Subtypes</a></li>
-            <li><a href="artists.html">Artists</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="cards">Cards</a></li>
+            <li><a href="sets">Sets</a></li>
+            <li><a href="subtypes">Subtypes</a></li>
+            <li><a href="artists">Artists</a></li>
+            <li><a href="about">About</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
 
     <div class="overlay">
-      <img src="images/MainLogo.png" id="main-logo" style="display: block; margin: auto; width: 50%;">
+      <img src="static/images/MainLogo.png" id="main-logo" style="display: block; margin: auto; width: 50%;">
       <h1 class="index-descr">Magic the Gathering Database</h1>
     </div>
 
@@ -60,7 +60,7 @@
         <div class="carousel-inner">
             <div class="item active">
                 <!-- Set the first background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('images/genesis.jpg');"></div>
+                <div class="fill" style="background-image:url('static/images/genesis.jpg');"></div>
                 <div class="carousel-caption">
                     <h2>Card: Progenitus</h2>
                     <h2>Set: Conflux</h2>
@@ -70,7 +70,7 @@
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('images/resurgent.jpg');"></div>
+                <div class="fill" style="background-image:url('static/images/resurgent.jpg');"></div>
                 <div class="carousel-caption">
                     <h2>Card: Zendikar Resurgent</h2>
                     <h2>Set: Oath of the Gatewatch</h2>
@@ -80,7 +80,7 @@
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('images/planar.jpg');"></div>
+                <div class="fill" style="background-image:url('static/images/planar.jpg');"></div>
                 <div class="carousel-caption">
                     <h2>Card: Planar Bridge</h2>
                     <h2>Set: Aether Revolt</h2>
@@ -90,7 +90,7 @@
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('images/viserys.jpg');"></div>
+                <div class="fill" style="background-image:url('static/images/viserys.jpg');"></div>
                 <div class="carousel-caption">
                     <h2>Card: Anguished Unmaking</h2>
                     <h2>Set: Shadows over Innistrad</h2>
