typo blah blah balh.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -122,7 +122,7 @@
         indexDescr = Math.min(Math.max(16, 4 * unit), 64);
 
         $('.carousel-caption h2').css('font-size', carouselSize + 'px');
-        $('.index-descr').css('font-size', indexDescrindexDescr + 'px');
+        $('.index-descr').css('font-size', indexDescr + 'px');
       }
       fontResize();
       $(window).resize( function () {fontResize()});
