--- a/app/templates/test.html
+++ b/app/templates/test.html
@@ -1,7 +1,7 @@
 {%extends "base.html"%}
 
 {%block content%}
-
-<h1>{{text}}</h1>
+<h1>We're trying to read from the database!<h1>
+<h2>{{text}}</h2>
 
 {%endblock%}
