Added routing addresses and easter egg, fixed title tag

--- a/app/templates/cards.html
+++ b/app/templates/cards.html
@@ -35,6 +35,9 @@
 		</div>
 	</div>
 
+	{% for card in cards %}
+
+	{% endfor %}
 	<div class="container-fluid">
 		<div class="model-inst">
 			<img src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=413585&type=card">
