--- a/app/templates/test.html
+++ b/app/templates/test.html
@@ -1,7 +1,9 @@
 {%extends "base.html"%}
 
 {%block content%}
-<h1>We're trying to read from the database!<h1>
-<h2>{{text}}</h2>
+<h1>This is an easter egg, congratulations!!!!<h1>
+<img src = 'static/images/nilo_old.png'>
+<img src = 'static/images/jose_old.png'>
+
 
 {%endblock%}
