--- a/app/templates/cards.html
+++ b/app/templates/cards.html
@@ -2,42 +2,82 @@
 
 {%block content%}
 	<link rel="stylesheet" type="text/css" href="../static/css/models.css">
+	<script type="text/babel">
+		function SortOption(props) {
+			return (
+				<ol>
+					<button className="btn btn-default">{props.name}</button>
+				</ol>
+			);
+		}
+			
+		function SortList() {
+			return (
+				<div className="btn-group">
+					<button className="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					    Sort By: <span className="caret"></span>
+					</button>
+					<ul className="dropdown-menu">
+						<SortOption name="Name"/>
+						<SortOption name="Mana Cost"/>
+						<SortOption name="Power"/>
+						<SortOption name="Toughness"/>
+						<SortOption name="Rarity"/>
+						<SortOption name="Color"/>
+						<SortOption name="Type"/>
+					</ul>
+				</div>
+			);
+		}
+		ReactDOM.render(
+			<SortList/>,
+			document.getElementById('sorting-options')
+		);
+	</script>
+	<script type="text/babel">
+		function FilterOption(props) {
+			return (
+				<ol>
+					<label className="checkbox-inline">
+						<input type="checkbox" value=""></input>
+						{props.name}
+					</label>
+					<input type="text" className="form-control" id={"filter-" + props.name.toLowerCase().replace(/\s/g,'')}></input>
+				</ol>
+			);
+		}
+			
+		function FilterList() {
+			return (
+				<div className="btn-group">
+					<button className="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+		    			Filter By: <span className="caret"></span>
+		  			</button>
+					<ul className="dropdown-menu" id="filtering-options">
+						<FilterOption name="Mana Cost"/>
+						<FilterOption name="Power"/>
+						<FilterOption name="Toughness"/>
+						<FilterOption name="Rarity"/>
+						<FilterOption name="Color"/>
+						<FilterOption name="Type"/>
+					</ul>
+				</div>
+			);
+		}
+		ReactDOM.render(
+			<FilterList/>,
+			document.getElementById('filtering-options')
+		);
+	</script>
+
 	<div class="magicdb-header">
 		<h1>Cards</h1>
 		<h3>There are thousands of unique cards in Magic, here are some of them. </h3>
-		<div class="btn-group">
-		  <button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-		    Sort By: <span class="caret"></span>
-		  </button>
-		  <ul class="dropdown-menu">
-		    <ol>Name</ol>
-		    <ol>Mana Cost</ol>
-		    <ol>Power</ol>
-		    <ol>Toughness</ol>
-		    <ol>Rarity</ol>
-		    <ol>Color</ol>
-		    <ol>Type</ol>
-		  </ul>
-		</div>
-		<div class="btn-group">
-		  <button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-		    Filter By: <span class="caret"></span>
-		  </button>
-		  <ul class="dropdown-menu">
-		    <ol><label class="checkbox-inline"><input type="checkbox" value="">Name</label><input type="text" class="form-control" id="usr"></ol>
-		    <ol><label class="checkbox-inline"><input type="checkbox" value="">Mana Cost</label><input type="text" class="form-control" id="usr"></ol>
-		    <ol><label class="checkbox-inline"><input type="checkbox" value="">Power</label><input type="text" class="form-control" id="usr"></ol>
-		    <ol><label class="checkbox-inline"><input type="checkbox" value="">Toughness</label><input type="text" class="form-control" id="usr"></ol>
-		    <ol><label class="checkbox-inline"><input type="checkbox" value="">Rarity</label><input type="text" class="form-control" id="usr"></ol>
-		    <ol><label class="checkbox-inline"><input type="checkbox" value="">Color</label><input type="text" class="form-control" id="usr"></ol>
-		    <ol><label class="checkbox-inline"><input type="checkbox" value="">Type</label><input type="text" class="form-control" id="usr"></ol>
-		  </ul>
-		</div>
+		<span id="sorting-options"></span>
+		<span id="filtering-options"></span>
 	</div>
 
-	{% for card in cards %}
-
-	{% endfor %}
+	
 	<div class="container-fluid">
 		<div class="model-inst">
 			<img src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=413585&type=card">
