--- a/app/templates/sets.html
+++ b/app/templates/sets.html
@@ -10,12 +10,16 @@
 				</ol>
 			);
 		}
+
+		function sortOrderChange() {
+			$("#sort-order").toggleClass("glyphicon-arrow-down glyphicon-arrow-up")
+		}
 			
 		function SortList() {
 			return (
 				<div className="btn-group">
 					<button className="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					    Sort By: <span className="caret"></span>
+					    Sort By: <span id="sort-order" className="glyphicon glyphicon-arrow-down" onClick={sortOrderChange}></span>
 					</button>
 					<ul className="dropdown-menu">
 						<SortOption name="Name"/>
