--- a/app/templates/subtypes.html
+++ b/app/templates/subtypes.html
@@ -42,12 +42,16 @@
 				</ol>
 			);
 		}
+
+		function sortOrderChange() {
+			$("#sort-order").toggleClass("glyphicon-arrow-down glyphicon-arrow-up")
+		}
 			
 		function FilterList() {
 			return (
 				<div className="btn-group">
 					<button className="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-		    			Filter By: <span className="caret"></span>
+		    			Sort By: <span id="sort-order" className="glyphicon glyphicon-arrow-down" onClick={sortOrderChange}></span>
 		  			</button>
 					<ul className="dropdown-menu" id="filtering-options">
 						<FilterOption name="Number of Cards"/>
